style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body,
.wrapper {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: sans-serif;
  background-color: #f9fbfd;
}

.wrapper {
  padding-top: 30px;
  padding-left: 20px;
  padding-right: 20px;
}

header {
    text-align: center;
    padding: 20px;
    padding-top: 0px;
    color: hsl(206, 17%, 28%);
  }

button {
  font-weight: bolder;
  background-color: hsl(360, 91%, 36%);
}

ol {
  list-style-type:none;
}

.timer {
  text-align: right;
}
  .quiz-card {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    background-color: hsl(0, 0%, 100%);
    border-radius: 5px;
    border-width: 1px;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
    color: hsl(206, 17%, 28%);
    font-size: 18px;
    margin: 0 auto;
    max-width: 800px;
    padding: 30px 40px;
  }
  .quiz-card-header::after {
    content: " ";
    display: block;
    width: 100%;
    background: #e7e9eb;
    height: 2px;
  }

  .quiz-card-footer {
    text-align: center;
    margin-left: 200px;
    margin-right: 200px;
  }
  
  .quiz-card-footer::before {
    content: " ";
    display: block;
    width: 100%;
  }
  
.quiz-card-footer::after {
    content: " ";
    display: block;
    clear: both;
  }

.column {
  flex-direction: column;
} 

.choice-format {
  display: flex;
  font-weight: bolder;
  text-align: left;
  width: 300px;
  border: none;
  background-color: hsl(360, 91%, 36%);
  border-radius: 25px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
  color: hsl(0, 0%, 100%);
  font-size: 20px;
  line-height: 22px;
  margin: 5px;
  margin-left: -35px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  cursor: pointer;
}

.choice-format:hover {
  background-color: rgb(196, 60, 60);
}

.btn {
  border: none;
  background-color: hsl(360, 91%, 36%);
  border-radius: 25px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
  color: hsl(0, 0%, 100%);
  display: inline-block;
  font-size: 22px;
  line-height: 22px;
  margin: 16px 16px 16px 20px;
  padding: 14px 34px;
  text-align: center;
  cursor: pointer;
}

.btn:hover {
  background-color: rgb(196, 60, 60);
}

.margin-top {
  margin-top: 40px;
}
.user-input {
  padding-top: 14px;
  padding-bottom: 5px;
  padding-left: 13px;
  border: 2px solid #000000;
  border-radius: 5px;
  width: 200px;
}

.flex {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.row {
  flex-direction: row;
}

.justify-center {
  justify-content: center;
}
.user-class {
  text-align: center;
  flex-direction: column;
  color: hsl(206, 16%, 17%);
  font-size: 18px;
  text-transform: uppercase;
}

.user-name {
  border-bottom: 1px solid lightgrey;
  text-transform: uppercase;
}

.submit-btn {
  display: inline-block;
  width: 250px;
  border: none;
  background-color: hsl(360, 91%, 36%);
  border-radius: 25px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
    0px;
  color: hsl(0, 0%, 100%);
  font-size: 22px;
  line-height: 22px;
  padding: 10px;
  cursor: pointer;
  margin-left: 10px;
}

.goBack-clearScore-btn {
  display: inline-block;
  width: 250px;
  border: none;
  background-color: hsl(360, 91%, 36%);
  border-radius: 25px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
    0px;
  color: hsl(0, 0%, 100%);
  font-size: 22px;
  line-height: 22px;
  padding: 10px;
  cursor: pointer;
  margin-left: 35px;
  margin-right: 100px;
}

.answer-style {
  color: hsl(206, 17%, 28%);
  font-size: 25px;
}

.sub
button[disabled] {
  cursor: default;
  background: #c0c7cf;
}

@media screen and (max-width: 859px) {
  .goBack-clearScore-btn {
    margin-top: 10px;
  }
}

